--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "require": {
         "simplesamlphp/composer-module-installer": "~1.0"
     },
-    "require": {
+    "require-dev": {
         "simplesamlphp/simplesamlphp": "~1.17",
         "simplesamlphp/simplesamlphp-test-framework": "~0.0.10"
     }
