--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,11 @@
             "email": "olav.morken@uninett.no"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "SimpleSAML\\Module\\logpeek\\": "lib/"
+        }
+    },
     "require": {
         "simplesamlphp/composer-module-installer": "~1.0"
     },
