Start testing for PHP 8.0

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         }
     },
     "require": {
-        "php": ">=7.4",
+        "php": ">=7.4 || ^8.0",
 
         "simplesamlphp/composer-module-installer": "~1.0",
         "simplesamlphp/simplesamlphp": "dev-master"
