--- a/routing/routes/routes.yml
+++ b/routing/routes/routes.yml
@@ -1,3 +1,3 @@
 logpeek-main:
     path:       /
-    defaults:   { _controller: 'SimpleSAML\Module\autotest\Controller\Logpeek::main' }
+    defaults:   { _controller: 'SimpleSAML\Module\logpeek\Controller\Logpeek::main' }
