--- a/composer.json
+++ b/composer.json
@@ -15,17 +15,17 @@
     ],
     "autoload": {
         "psr-4": {
-            "SimpleSAML\\Module\\logpeek\\": "lib/"
+            "SimpleSAML\\Module\\logpeek\\": "src/"
         }
     },
     "require": {
         "php": ">=7.4 || ^8.0",
 
-        "simplesamlphp/composer-module-installer": "~1.0",
-        "simplesamlphp/simplesamlphp": "^2.0.0-beta.2"
+        "simplesamlphp/composer-module-installer": "~1.1.8",
+        "simplesamlphp/simplesamlphp": "^2.0.0-beta.11"
     },
     "require-dev": {
-        "simplesamlphp/simplesamlphp-test-framework": "~1.1.4"
+        "simplesamlphp/simplesamlphp-test-framework": "~1.2.1"
     },
     "config": {
         "allow-plugins": {
