Set allowed methods

--- a/routing/routes/routes.yml
+++ b/routing/routes/routes.yml
@@ -1,3 +1,4 @@
 logpeek-main:
     path:       /
     defaults:   { _controller: 'SimpleSAML\Module\logpeek\Controller\Logpeek::main' }
+    methods:    [GET]
