--- a/composer.json
+++ b/composer.json
@@ -19,13 +19,16 @@
         }
     },
     "require": {
-        "php": ">=7.4 || ^8.0",
+        "php": "^8.1",
+        "ext-date": "*",
 
-        "simplesamlphp/composer-module-installer": "^1.3.2",
-        "simplesamlphp/simplesamlphp": "^2.0.0-rc2"
+        "simplesamlphp/assert": "^1.0",
+        "simplesamlphp/composer-module-installer": "^1.3",
+        "simplesamlphp/simplesamlphp": "^2.1",
+        "symfony/http-foundation": "^6.4"
     },
     "require-dev": {
-        "simplesamlphp/simplesamlphp-test-framework": "~1.2.1"
+        "simplesamlphp/simplesamlphp-test-framework": "^1.5"
     },
     "config": {
         "allow-plugins": {
